# qg-bilingual

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
configs/: generation_example.yaml  qg2qa_en.yaml  qg2qa_ua.yaml  safety.yaml  train_bart_base_agnostic_en.yaml  train_bart_base_aware_en.yaml  train_mt5_base_aware_en.yaml  train_mt5_base_aware_ua.yaml  train_t5_base.yaml  train_t5_smoke_en.yaml
data/: stats_en.json  stats_ua.json
data/artifacts/: data_card.md  squad_v2_sample.json
data/artifacts/en/: test.jsonl  train.jsonl  val.jsonl
data/artifacts/ua/: test.jsonl  train.jsonl  val.jsonl
data/prep_logs/: en_dropped.jsonl
data/scripts/: prepare_en.py  prepare_ua.py  validate_jsonl.py
demo/: README.md  app_gradio.py  client.py  examples.jsonl
docker/: Dockerfile.cpu  Dockerfile.cuda  entrypoint_demo.sh  entrypoint_server.sh
docs/: ablation.md  data.md  metrics.md  model_compare.md  project_plan.md  protocols.md  task_breakdown.md
docs/datasheets/: en.md  ua.md
eval/: ablation_results.csv  decoding_ablation.py  plots.py
eval/mos/: aggregate.py  annotate_ui.md  guideline.md  mos_batch_smoke.jsonl  sample_builder.py  schema.json
scripts/: render_docs.py
src/qg_bilingual/: __init__.py  cli.py  train.py
tests/: conftest.py  test_data_validate.py  test_generation_smoke.py  test_mos_and_samples_metadata.py  test_prompts.py  test_qg2qa_e2e.py  test_qg2qa_schema.py  test_safety_nli.py  test_safety_toxicity.py  test_server.py
(+26 files in other folders)
